# greentic-provision

./: .gitignore  Cargo.toml  SECURITY_FIX_REPORT.md  pr-changed-files.txt  pr-comment.md
.codex/: GPROV-PR-01.md  GPROV-PR-02.md  GPROV-PR-03.md  GPROV-PR-04.md
.github/workflows/: ci.yml  codex-security-fix.yml  crates-publish.yml  dev-publish.yml  nightly-conformance.yml  release-binaries.yml
crates/greentic-provision-cli/: Cargo.toml
crates/greentic-provision-core/: Cargo.toml
