[workspace]
resolver = "2"
members = [
  "crates/greentic-provision-core",
  "crates/greentic-provision-cli",
]

[workspace.package]
version = "0.4.4"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
wasmtime = { version = "40", default-features = false, features = ["cranelift"] }
wat = "1"
tempfile = "3"
zip = "7"
ciborium = "0.2"

# Greentic shared crates
# Pinned to 0.4 per project guidance.
greentic-types = "0.4"
greentic-interfaces = "0.4"
greentic-oauth-client = "0.4"
