[workspace]
resolver = "2"
members = [
    "crates/greentic-provision-core",
    "crates/greentic-provision-cli",
]

[workspace.package]
version = "0.5.0-dev.0"
edition = "2024"

[workspace.dependencies]
serde_json = "1"
thiserror = "2"
wat = "1"
tempfile = "3"
zip = "7"
ciborium = "0.2"
greentic-types = ">=0.5.0-dev, <0.6.0-0"
greentic-interfaces = ">=0.5.0-dev, <0.6.0-0"
greentic-oauth-client = ">=0.5.0-dev, <0.6.0-0"

[workspace.dependencies.serde]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.clap]
version = "4.5"
features = [
    "derive",
]

[workspace.dependencies.wasmtime]
version = "40"
default-features = false
features = [
    "cranelift",
]
