[package]
name = "greentic-provision"
version.workspace = true
edition.workspace = true
description = "Greentic provisioning CLI for running setup packs"
license = "MIT"
repository = "https://github.com/greenticai/greentic-provision"
homepage = "https://github.com/greenticai/greentic-provision"
readme = "../../README.md"
keywords = ["greentic", "provisioning", "cli"]
categories = ["command-line-utilities"]
authors = ["Greentic"]

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true
zip.workspace = true
ciborium.workspace = true

greentic-provision-core = { path = "../greentic-provision-core", version = "0.4.0" }

# Greentic shared crates
# Pinned to 0.4 per project guidance.
greentic-types.workspace = true
greentic-interfaces.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[package.metadata.binstall]
pkg-url = "https://github.com/greenticai/greentic-provision/releases/download/v{version}/greentic-provision-{version}-{target}.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "https://github.com/greenticai/greentic-provision/releases/download/v{version}/greentic-provision-{version}-{target}.zip"
pkg-fmt = "zip"

