[package]
name = "greentic-provision"
version.workspace = true
edition.workspace = true
description = "Greentic provisioning CLI for running setup packs"
license = "MIT"
repository = "https://github.com/greenticai/greentic-provision"
homepage = "https://github.com/greenticai/greentic-provision"
readme = "../../README.md"
keywords = ["greentic", "provisioning", "cli"]
categories = ["command-line-utilities"]
authors = ["Greentic"]

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true
zip.workspace = true
ciborium.workspace = true

greentic-provision-core = { path = "../greentic-provision-core", version = "0.4.0" }

# Greentic shared crates
# Pinned to 0.4 per project guidance.
greentic-types.workspace = true
greentic-interfaces.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tgz"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]
