[package]
name = "greentic-provision"
version.workspace = true
edition.workspace = true
description = "Greentic provisioning CLI for running setup packs"
license = "MIT"
repository = "https://github.com/greenticai/greentic-provision"
homepage = "https://github.com/greenticai/greentic-provision"
readme = "../../README.md"
keywords = [
    "greentic",
    "provisioning",
    "cli",
]
categories = [
    "command-line-utilities",
]
authors = [
    "Greentic",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tgz"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]

[dependencies.clap]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tempfile]
workspace = true

[dependencies.zip]
workspace = true

[dependencies.ciborium]
workspace = true

[dependencies.greentic-provision-core]
path = "../greentic-provision-core"
version = ">=0.5.0-dev, <0.6.0-0"

[dependencies.greentic-types]
workspace = true

[dependencies.greentic-interfaces]
workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
