[package]
name = "greentic-provision-core"
version.workspace = true
edition.workspace = true
description = "Greentic provisioning engine core"
license = "MIT"
repository = "https://github.com/greenticai/greentic-provision"
homepage = "https://github.com/greenticai/greentic-provision"
readme = "../../README.md"
keywords = ["greentic", "provisioning", "engine"]
categories = ["development-tools"]
authors = ["Greentic"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
wat.workspace = true

greentic-types.workspace = true
greentic-interfaces.workspace = true
greentic-oauth-client.workspace = true

[dev-dependencies]
serde_json.workspace = true
